--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,18 +1,19 @@
 {
   "dependencies": {
-    "com.unity.collab-proxy": "2.0.3",
+    "com.unity.ai.navigation": "1.1.4",
+    "com.unity.collab-proxy": "2.0.5",
     "com.unity.feature.development": "1.0.1",
     "com.unity.ide.vscode": "1.2.5",
-    "com.unity.render-pipelines.universal": "12.1.8",
+    "com.unity.render-pipelines.universal": "14.0.8",
     "com.unity.robotics.ros-tcp-connector": "https://github.com/Unity-Technologies/ROS-TCP-Connector.git?path=/com.unity.robotics.ros-tcp-connector",
     "com.unity.textmeshpro": "3.0.6",
-    "com.unity.timeline": "1.6.4",
+    "com.unity.timeline": "1.7.4",
     "com.unity.ugui": "1.0.0",
     "com.unity.visualscripting": "1.8.0",
-    "com.unity.xr.arcore": "4.2.8",
-    "com.unity.xr.arfoundation": "4.2.8",
-    "com.unity.xr.arkit": "4.2.8",
-    "com.unity.xr.oculus": "3.2.3",
+    "com.unity.xr.arcore": "5.0.6",
+    "com.unity.xr.arfoundation": "5.0.6",
+    "com.unity.xr.arkit": "5.0.6",
+    "com.unity.xr.oculus": "4.0.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
