--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 /[Bb]uilds/
 /[Ll]ogs/
 /[Mm]emoryCaptures/
+/_iOSBuild/
 
 # OpenCVForUnity Plugin (see README for download instructions)
 [Aa]ssets/Plugins/OpenCVForUnity/
