--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -11,8 +11,10 @@
     "com.unity.mathematics": "1.2.6",
     "com.unity.mobile.android-logcat": "1.3.2",
     "com.unity.polybrush": "1.1.5",
+    "com.unity.probuilder": "5.1.1",
     "com.unity.render-pipelines.universal": "14.0.8",
     "com.unity.robotics.ros-tcp-connector": "https://github.com/Unity-Technologies/ROS-TCP-Connector.git?path=/com.unity.robotics.ros-tcp-connector",
+    "com.unity.splines": "2.4.0",
     "com.unity.terrain-tools": "5.0.3",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.7.5",
