--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -4,6 +4,7 @@
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.ai.navigation": "1.1.4",
     "com.unity.burst": "1.8.8",
+    "com.unity.cinemachine": "2.9.5",
     "com.unity.collab-proxy": "2.0.7",
     "com.unity.collections": "1.2.4",
     "com.unity.editorcoroutines": "1.0.0",
