adding native pluggins

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -116,5 +116,6 @@
         "typeinfo": "cpp",
         "variant": "cpp",
         "bit": "cpp"
-    }
+    },
+    "C_Cpp.errorSquiggles": "enabled"
 }
