change to linux, changed lens offset, working on garum remake

--- a/Packages/Vosk/Runtime/Scripts/babilinski.vosk.unity.asmdef
+++ b/Packages/Vosk/Runtime/Scripts/babilinski.vosk.unity.asmdef
@@ -5,6 +5,7 @@
     "includePlatforms": [
         "Android",
         "Editor",
+        "LinuxStandalone64",
         "WindowsStandalone64"
     ],
     "excludePlatforms": [],
