--- a/Assets/Vosk/Scripts/babilinski.vosk.samples.asmdef
+++ b/Assets/Vosk/Scripts/babilinski.vosk.samples.asmdef
@@ -8,6 +8,7 @@
     "includePlatforms": [
         "Android",
         "Editor",
+        "LinuxStandalone64",
         "WindowsStandalone64"
     ],
     "excludePlatforms": [],
